--- a/シーケンス図_メモを一覧表示する.md
+++ b/シーケンス図_メモを一覧表示する.md
@@ -7,11 +7,11 @@ sequenceDiagram
     participant flask as フラスクサーバ
 
     user ->> browser: IDとパスワードを入力してログインを試行
-    browser ->> flask: ログインリクエスト (IDとパスワード)
-    flask ->> udb: ユーザー情報を照合 (IDとパスワード)
+    browser ->> flask: ログインリクエスト
+    flask ->> udb: ユーザー情報を照合
     udb -->> flask: 認証成功
     flask ->> mdb: 該当ユーザーのメモ一覧を取得
     mdb -->> flask: メモ一覧データ
-    flask ->> browser: メモ一覧画面にリダイレクト (メモデータを含む)
+    flask ->> browser: メモ一覧画面にリダイレクト(メモデータを含む)
     browser -->> user: メモ一覧を表示
 ```
