文言一部編集

--- a/シーケンス図_メモを新規登録する.md
+++ b/シーケンス図_メモを新規登録する.md
@@ -10,7 +10,7 @@ sequenceDiagram
     browser ->> flask: 新規登録画面リクエスト
     flask -->> browser: 新規登録画面表示
 
-    user ->> browser: タイトル, メモの内容を入力/登録ボタン押下
+    user ->> browser: タイトル, メモの内容を入力/「登録」ボタン押下
     browser ->> flask: メモの新規登録リクエスト(タイトル, メモの内容)
     flask ->> mdb: 新規メモデータの追加・保存
     mdb -->> flask: 登録完了
